--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,11 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 @layer base {
@@ -68,5 +73,14 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer components {
+  .icons {
+    @apply text-neutral-500 bg-neutral-100 px-3 py-2 rounded-full  text-xs md:text-sm flex gap-2 items-center hover:bg-neutral-200 transition-colors;
+  }
+  .icon-text {
+    @apply max-sm:hidden;
   }
 }
