--- a/app/globals.css
+++ b/app/globals.css
@@ -106,7 +106,7 @@ body {
     @apply mt-6;
   }
   .date-text {
-    @apply text-neutral-600 max-sm:text-sm;
+    @apply text-neutral-600;
   }
   .current-date {
     @apply text-green-600 text-sm bg-green-100 flex items-center gap-1  px-3 py-1 rounded-full;
