--- a/app/globals.css
+++ b/app/globals.css
@@ -106,12 +106,12 @@ body {
     @apply mt-6;
   }
   .date-text {
-    @apply text-neutral-600;
+    @apply text-neutral-600 ;
   }
   .current-date {
-    @apply text-green-600 text-sm bg-green-100 flex items-center gap-1  px-3 py-1 rounded-full;
+    @apply text-green-600 bg-green-100 flex items-center gap-1  px-3 py-1 rounded-full;
   }
   .footer-container {
-    @apply w-full max-w-4xl  flex md:flex-row flex-col justify-between px-4 py-8;
+    @apply w-full max-w-4xl  flex md:flex-row flex-col justify-between px-4 py-8 gap-4;
   }
 }
